# sputnikplusplus

./: .gitignore  CMakeLists.txt  README.md  Sputnik++.sln  inject.sh
Injector/: CMakeLists.txt  Injector.vcxproj  linux.h  main.cpp  windows.h
Sputnik++/: CMakeLists.txt  Sputnik++.vcxproj  Sputnik++.vcxproj.filters  dllmain.cpp  io.h  java.h
Sputnik++/module/: Category.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
Sputnik++/module/modules/: FlightModule.h
Sputnik++/module/setting/: Setting.h  SettingGroup.h
Sputnik++/module/setting/settings/: BoolSetting.h  KeySetting.h  NumberSetting.h
Sputnik++/sdk/: Abilities.cpp  Abilities.h  Minecraft.cpp  Minecraft.h  Player.cpp  Player.h  classnames.h
Sputnik++/util/: KeyUtil.h  LinuxKeys.h
